[gd_scene load_steps=5 format=3 uid="uid://dqlshvenfg5dk"]

[ext_resource type="Script" uid="uid://d1atc3c3u2vwv" path="res://ui/pop_display.gd" id="1_rtudr"]
[ext_resource type="PackedScene" uid="uid://dlwq4kmdb3bhs" path="res://addons/easy_charts/control_charts/chart.tscn" id="2_rtudr"]

[sub_resource type="Gradient" id="Gradient_rtudr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gs2b0"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="PopDisplay" type="Control"]
layout_mode = 3
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtudr")
gradient = SubResource("Gradient_rtudr")

[node name="Tab" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gs2b0")
current_tab = 0

[node name="PopGraph" type="ScrollContainer" parent="Tab"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HFlowContainer" type="VBoxContainer" parent="Tab/PopGraph"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Chart" parent="Tab/PopGraph/HFlowContainer" instance=ExtResource("2_rtudr")]
layout_mode = 2

[node name="POPs" type="ScrollContainer" parent="Tab"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Tab/POPs"]
layout_mode = 2

[node name="Label" type="Label" parent="Tab/POPs/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
